[project]
name = "nsw-fuel-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.13,<3.14"
uv = "*"   # mcp[cli] invokes uv internally to launch MCP servers

[tool.pixi.pypi-dependencies]
strands-agents-tools = ">=0.2.0"
bedrock-agentcore-starter-toolkit = ">=0.1.33"
mcp = {version = ">=1.25.0", extras = ["cli"]}
strands-agents = {version = ">=1.34.1", extras = ["openai"]}
pandas = ">=3.0.0"
strands-agents-evals = ">=0.1.13"
httpx = ">=0.28.0"

[tool.pixi.tasks]
agent = "python agents/agent.py"
ui = "streamlit run app/app.py"
evals = "python evals/eval.py"
invoke = "agentcore invoke '{\"prompt\": \"Hello. What can you do for me?\"}'"
